plugins {
    id 'com.android.library'
}


android {
    compileSdk 32

    defaultConfig {
        minSdk 26
        targetSdk 32
        buildConfigField "long", "TIMEOUT", "${1000 * 60 * 30}" // 30 minutes
        buildConfigField "String", "VERSION_HEADER", "\"aspose.html-cloud android sdk\""
        buildConfigField "String", "VERSION_NUMBER", "\"22.9.1\""
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}
tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}
dependencies {
    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'io.gsonfire:gson-fire:1.8.0'
    implementation 'org.threeten:threetenbp:1.3.5'
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.8.1"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.1"
}